# compiler-project

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  Makefile.deploy  README.md  SPRINT1_STATUS.md  SPRINT2_STATUS.md  SPRINT3_STATUS.md  SPRINT4_STATUS.md  SPRINT5_STATUS.md  SPRINT6_STATUS.md  SPRINT7_STATUS.md  SPRINT8_STATUS.md  USER_GUIDE.md  cfg.dot  factorial.asm  ir.json  semantic_ast.dot  showcase  showcase.ir  symbols.json  test_full_lsra.asm  test_lsra.asm  test_peephole.asm  test_stack.asm  tmp_ir_gen.cpp  tokens.txt
demo/: README.md  errors_showcase.src  run_demo.sh  showcase.ir  showcase.src
docs/: ARCHITECTURE.md  grammar.md  language_spec.md
examples/: factorial.asm  factorial.src  hello.src  pp_demo.src  semantic_demo.src
src/: main.cpp
src/codegen/: abi.cpp  abi.h  liveness.cpp  liveness.h  register_allocator.cpp  register_allocator.h  stack_frame.cpp  stack_frame.h  x86_generator.cpp  x86_generator.h  x86_peephole.cpp  x86_peephole.h
src/ir/: basic_block.cpp  basic_block.h  ir_generator.cpp  ir_generator.h  ir_instructions.cpp  ir_instructions.h  ir_printer.cpp  ir_printer.h  optimization_passes.cpp  optimization_passes.h  optimizer.cpp  optimizer.h
src/lexer/: scanner.cpp  scanner.h  token.cpp  token.h
src/parser/: ast.h  ast_printer.h  parser.cpp  parser.h  symbol_table.cpp  symbol_table.h
src/preprocessor/: preprocessor.cpp  preprocessor.h
src/runtime/: runtime.asm
src/semantic/: analyzer.cpp  analyzer.h  errors.cpp  errors.h  symbol_table.cpp  symbol_table.h  type_system.cpp  type_system.h
src/utils/: file_utils.cpp  file_utils.h
tests/codegen/scripts/: test_codegen.sh
tests/differential/: factorial.c  fibonacci.c  fibonacci.src
tests/integration/e2e/: factorial.src  sum_evens.src
tests/integration/examples/: factorial.expected  factorial.src
tests/lexer/invalid/: test_invalid_and.err  test_invalid_char.err  test_invalid_char.tok  test_invalid_hash.err  test_invalid_or.err  test_invalid_start_underscore.err  test_invalid_start_underscore.tok  test_malformed_number.err  test_malformed_number.tok  test_number_out_of_range.err  test_number_out_of_range.tok  test_unterminated_comment.err  test_unterminated_comment.tok  test_unterminated_string.tok  test_unterminated_string_newline.err  test_unterminated_string_newline.src  test_unterminated_string_newline.tok
tests/lexer/valid/: test_array.src  test_array.tok  test_assignment.src  test_assignment.tok  test_bool.tok  test_comment_only.tok  test_comments.src  test_comments.tok  test_crlf.tok  test_delimiters.src  test_fn_decl.src  test_fn_decl.tok  test_keywords.tok  (+26 more)
tests/scripts/: benchmark.sh  coverage.sh  differential_test.sh  fuzz_test.sh  integration_test.sh  mutation_test.sh  property_test.sh
tests/test_runner/: codegen_test_runner.cpp  integration_test_runner.cpp  ir_test_runner.cpp  main.cpp  parser_test_runner.cpp  semantic_test_runner.cpp
tests/unit/: test_codegen.cpp  test_ir.cpp  test_lexer.cpp  test_optimizer.cpp  test_parser.cpp  test_semantic.cpp
(+92 files in other folders)
